# hangar_front

./: Cargo.toml  Dockerfile  Trunk.toml
src/: app.rs  main.rs  router.rs
src/components/: danger_zone.rs  database_card.rs  deployment_progress.rs  env_manager.rs  footer.rs  gauge.rs  image_update_form.rs  mod.rs  participant_manager.rs  project_controls.rs  project_info.rs  project_logs.rs  project_metrics.rs  protected_route.rs  system_notifications.rs
src/contexts/: mod.rs  sse_context.rs
src/hooks/: mod.rs  use_sse.rs
src/models/: database.rs
src/pages/: admin.rs  create_project.rs  database_dashboard.rs  home.rs  mod.rs  privacy.rs  project_dashboard.rs
src/services/: database_service.rs  mod.rs  project_service.rs  sse_service.rs
styles/: main.css
