[package]
name = "hangar_front"
version = "1.0.0"
edition = "2024"


[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-console = "0.3"
gloo-net = {version = "0.6", features = ["eventsource"] }
gloo-timers = "0.3"
wasm-bindgen-futures = "0.4"
futures = "0.3"
log = "0.4"
wasm-logger = "0.2"
i18nrs = { version = "0.1", features = ["yew"] }


[dependencies.web-sys]
version = "0.3"
features = [
  'Window',
  'Navigator',
  'Location',
  'HtmlSelectElement',
  'EventSourceInit'
]


